--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap"
     rel="stylesheet"
   />
-  <script src="main.js"></script>
+
+  <script src="main.js" defer></script>
 </head>
 <body>
   <!-- title segment-->
@@ -27,7 +28,7 @@
         id="plagueroom"
         style="text-shadow: 0px 0px 20px red"
       >
-        the PLAGUEROOM
+        <a href="index.html"> the PLAGUEROOM</a>
       </h1>
     </div>
     <img
@@ -50,48 +51,51 @@
       <div id="socials">
         <h3>Come find me on</h3>
         <a href="https://discordapp.com/users/694605691716894820">
-          <img
-            height="50px"
-            width="50px"
-            src="https://i.allthepics.net/2026/02/27/discord.png"
+          <img height="50px" width="50px" src="assets\discord.ico"
         /></a>
-
-        <a href="https://plaguery.straw.page/">strawpage</a>
         <a href="https://www.roblox.com/users/296944867/profile"
-          ><img
-            height="50px"
-            width="50px"
-            src="https://i.allthepics.net/2026/02/27/roblox.webp"
+          ><img height="50px" width="50px" src="assets/roblox.ico"
+        /></a>
+        <a href="file:///C:/plaguery"
+          ><img height="50px" width="50px" src="assets/explorer.ico"
         /></a>
       </div>
     </aside>
-    <div class="content" id="contentMain">
-      <section id="about">
-        <h2>home</h2>
-        <p class="metamorphous">i'm plague</p>
-        <p>whaddup. i'm canadian! 🍁</p>
-        <p>that's really all you need to know</p>
-      </section>
-      <div class="relative">
-        <div id="cheeseBox">
-          <pre id="cheesedText">
+    <div class="content">
+      <section class="row bottommargin">
+        <div id="about">
+          <h2>home</h2>
+          <p class="metamorphous">i'm plague</p>
+          <p>whaddup. i'm canadian! 🍁</p>
+          <p>that's really all you need to know</p>
+        </div>
+
+        <div class="relative">
+          <div id="cheeseBox">
+            <pre id="cheesedText">
  i'm <em>CHEESED</em>
   to meet you!</pre
-          >
-          <img
-            width="200px"
-            src="https://i.allthepics.net/2026/02/27/436-4362079_blank-speech-bubble-pixel-bubble.md.png"
-          />
+            >
+            <img width="200px" src="assets/speechbubble.png" />
+          </div>
+          <img height="250px" width="250px" src="assets/ratdance.gif" />
         </div>
-        <img
-          height="250px"
-          width="250px"
-          src="https://media.tenor.com/TAGsVNkhlIAAAAAj/rat-dance.gif"
-        />
-      </div>
+      </section>
 
-      <section></section>
+      <section class="bottommargin">
+        <h2>Favorite Characters!!!</h2>
+        <h3>awesome...</h3>
+        <div class="relative" id="charSection">
+          <img id="kira" height="175px" src="assets/kira.png" />
+        </div>
+      </section>
+
+      <section>
+        <h2>Games</h2>
+        <button>mouse</button>
+      </section>
     </div>
+
     <aside class="sidebar">
       <div class="center">
         <h3>COOL PEOPLE</h3>
@@ -100,7 +104,10 @@
           ><img src="https://mesaredux.com/assets/images/mesaredux.gif"
         /></a>
         <a class="webbadge" href="https://kadustoff.neocities.org/"
-          ><img src="https://i.allthepics.net/2026/02/27/button-88x31.gif"
+          ><img src="assets/kadust.gif"
+        /></a>
+        <a class="webbadge" href="https://aabel.neocities.org/"
+          ><img src="assets/aabel.gif"
         /></a>
       </div>
       <div class="center">
@@ -115,7 +122,7 @@
     </aside>
   </div>
   <marquee>
-    <img src="https://i.allthepics.net/2026/02/27/button-88x31-1.gif" />
+    <img src="assets/plaguery.gif" />
   </marquee>
   <div id="mobile">
     <h1>oh! a mobile user</h1>
