--- a/projects.html
+++ b/projects.html
@@ -9,4 +9,12 @@
     id="think"
     src="https://media1.tenor.com/m/E0IqRNXD-k4AAAAC/thinking-thought.gif"
   />
+
+  <section>
+    <h2>projects will go here...</h2>
+    <h>awesome!!</h>
+    <div class="carousel">
+      <div class="projectCard"></div>
+    </div>
+  </section>
 </body>
