--- a/template.html
+++ b/template.html
@@ -1,10 +1,4 @@
 <head>
-  <link rel="stylesheet" href="about.css" />
-  <link rel="stylesheet" href="default.css" />
-</head>
-<body></body>
-
-<head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="default.css" />
   <link rel="stylesheet" href="styles.css" />
@@ -27,12 +21,13 @@
       src="https://i.allthepics.net/2026/02/27/rat792b7a48eed1b37b.png"
     />
     <div id="title">
+      <h2 class="metamorphous" id="welcome">welcome to</h2>
       <h1
         class="metamorphous"
         id="plagueroom"
         style="text-shadow: 0px 0px 20px red"
       >
-        <a href="index.html"> the PLAGUEROOM</a>
+        the PLAGUEROOM
       </h1>
     </div>
     <img
@@ -50,17 +45,5 @@
     <a href="about.html" class="button">about me 🐀</a>
   </nav>
 
-  <div class="content" id="about">
-    <h2 class="metamorphous" id="welcome">about me</h2>
-    <p>i like to yap</p>
-
-    <section>
-      <h2>cool stuff</h2>
-      <p>here are some of my current interests!</p>
-      <ul>
-        <li>JJBA</li>
-        <li>theres more im just thinking of it lmao</li>
-      </ul>
-    </section>
-  </div>
+  <div class="content"></div>
 </body>
