changed about me to add ME!

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" href="about.css" />
   <link rel="stylesheet" href="default.css" />
+  <script src="about.js" defer></script>
 </head>
 <body></body>
 
@@ -15,7 +16,6 @@
     href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap"
     rel="stylesheet"
   />
-  <script src="main.js"></script>
 </head>
 <body>
   <!-- title segment-->
@@ -55,12 +55,10 @@
     <p>i like to yap</p>
 
     <section>
-      <h2>cool stuff</h2>
-      <p>here are some of my current interests!</p>
-      <ul>
-        <li>JJBA</li>
-        <li>theres more im just thinking of it lmao</li>
-      </ul>
+      <h2>Roblox Stats</h2>
+      <img id="avatar" alt="avatar" />
+      <h3>recent badges</h3>
+      <section id="badges"></section>
     </section>
   </div>
 </body>
