--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           ><img height="50px" width="50px" src="assets/explorer.ico"
         /></a>
       </div>
+      <img src="assets/jojolands.gif" />
     </aside>
     <div class="content">
       <section class="row bottommargin">
