--- a/about.html
+++ b/about.html
@@ -50,15 +50,16 @@
     <a href="about.html" class="button">about me 🐀</a>
   </nav>
 
-  <div class="content" id="about">
-    <h2 class="metamorphous" id="welcome">about me</h2>
-    <p>i like to yap</p>
-
-    <section>
-      <h2>Roblox Stats</h2>
-      <img id="avatar" alt="avatar" />
-      <h3>recent badges</h3>
-      <section id="badges"></section>
-    </section>
+  <div class="row">
+    <div class="content" id="about">
+      <h2 class="metamorphous" id="welcome">about me</h2>
+      <p>i like to yap</p>
+      <section>
+        <h2>Roblox Stats</h2>
+        <img id="avatar" alt="avatar" />
+        <h3>recent badges</h3>
+        <div id="badges"></div>
+      </section>
+    </div>
   </div>
 </body>
