refined 'about me'

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="about.css" />
   <link rel="stylesheet" href="default.css" />
   <script src="about.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body></body>
 
@@ -49,17 +50,15 @@
     <a href="projects.html" class="button">projects 🏗️</a>
     <a href="about.html" class="button">about me 🐀</a>
   </nav>
-
-  <div class="row">
-    <div class="content" id="about">
-      <h2 class="metamorphous" id="welcome">about me</h2>
-      <p>i like to yap</p>
-      <section>
-        <h2>Roblox Stats</h2>
-        <img id="avatar" alt="avatar" />
-        <h3>recent badges</h3>
-        <div id="badges"></div>
-      </section>
-    </div>
+  <div class="content" id="about">
+    <h2 class="metamorphous" id="welcome">about me</h2>
+    <p>i like to yap</p>
+    <section id="stats">
+      <h2>Roblox Stats</h2>
+      <h2>Status: <span id="status"></span></h2>
+      <img id="avatar" alt="avatar" />
+      <h3>recent badges</h3>
+      <div id="badges"></div>
+    </section>
   </div>
 </body>
