--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 
       <section>
         <h2>Games</h2>
+        <div>
+          <img id="games" src="assets/plaguery.gif" />
+        </div>
         <button>mouse</button>
       </section>
     </div>
@@ -110,6 +113,9 @@
         <a class="webbadge" href="https://aabel.neocities.org/"
           ><img src="assets/aabel.gif"
         /></a>
+        <a href="https://plaguery.github.io"
+          ><img src="assets/plaguery.gif"
+        /></a>
       </div>
       <div class="center">
         <h3>UPDATES</h3>
@@ -122,8 +128,20 @@
       </div>
     </aside>
   </div>
-  <marquee>
-    <img src="assets/plaguery.gif" />
+  <marquee scrollamount="12">
+    <img src="assets/plaguery2.gif" />
+    <img src="assets/seekers.png" />
+    <img src="assets/www.png" />
+    <img src="assets/roadkill.gif" />
+    <img src="assets/bestviewed.gif" />
+    <img src="assets/dontcopy.gif" />
+    <img src="assets/bcs.gif" />
+    <img src="assets/sweeper.gif" />
+    <img src="assets/jojo.gif" />
+    <img src="assets/canadian.gif" />
+    <img src="assets/bestvieweddesktop.gif" />
+    <img src="assets/wallbreakers.gif" />
+    <img src="assets/getsmile.gif" />
   </marquee>
   <div id="mobile">
     <h1>oh! a mobile user</h1>
