--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,77 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="default.css" />
   <link rel="stylesheet" href="projects.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap"
+    rel="stylesheet"
+  />
+  <script src="main.js"></script>
 </head>
 <body>
-  <p>....</p>
-  <p>what projects?</p>
-  <img
-    id="think"
-    src="https://media1.tenor.com/m/E0IqRNXD-k4AAAAC/thinking-thought.gif"
-  />
-
-  <section>
-    <h2>projects will go here...</h2>
-    <h>awesome!!</h>
-    <div class="carousel">
-      <div class="projectCard"></div>
+  <!-- title segment-->
+  <div class="row">
+    <img
+      class="wiggle"
+      width="100px"
+      height="100%"
+      src="https://i.allthepics.net/2026/02/27/rat792b7a48eed1b37b.png"
+    />
+    <div id="title">
+      <h1
+        class="metamorphous"
+        id="plagueroom"
+        style="text-shadow: 0px 0px 20px red"
+      >
+        <a href="index.html"> the PLAGUEROOM</a>
+      </h1>
     </div>
-  </section>
+    <img
+      class="wiggle"
+      width="100px"
+      height="100%"
+      src="https://i.allthepics.net/2026/02/27/rat3cafc3e26aedaa0e.png"
+    />
+  </div>
+
+  <!-- top bar links-->
+  <nav class="row" id="topbar">
+    <a href="thoughts.html" class="button">thoughts 💭</a>
+    <a href="projects.html" class="button">projects 🏗️</a>
+    <a href="about.html" class="button">about me 🐀</a>
+  </nav>
+
+  <div class="content" id="projects">
+    <section>
+      <h2>projects will go here...</h2>
+      <h>awesome!!</h>
+      <div class="carousel">
+        <div class="projectCard">
+          <img src="assets/underconstruction.png" />
+        </div>
+        <div class="projectCard">
+          <img src="assets/underconstruction.png" />
+        </div>
+        <div class="projectCard">
+          <img src="assets/underconstruction.png" />
+        </div>
+        <div class="projectCard">
+          <img src="assets/underconstruction.png" />
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <p>Currently working on</p>
+      <p>this website!</p>
+      <img
+        width="100px"
+        id="think"
+        src="https://media1.tenor.com/m/E0IqRNXD-k4AAAAC/thinking-thought.gif"
+      />
+    </section>
+  </div>
 </body>
